--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ left: 50%;
 transform: translate(-50%, -50%);
 }
 
+/* .logo{
+  text-align: start;
+  font-family: 'Zen Maru Gothic', sans-serif;
+  font-size: 50px;
+  animation: pyonpyon 3s infinite ease;
+  color: rgb(221, 103, 6);
+} */
+
 #splash_logo img{
   height: 300px;
   width: 300px;
