--- a/style.css
+++ b/style.css
@@ -296,14 +296,20 @@ dl dd {
 
 /* -- リナさん編集 -- */
 .one{
-    background-image: url(./canva-blue-watercolor-abstract-background-MAE2KwoFsTU.jpg);
+  background-image: url(./asset/haikei.jpeg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 
 
 #pickup{
-    text-align: center;
-    padding-top: 20px;
+  font-size: 40px;
+  font-family: 'Caveat', cursive;
+  color: rgb(32, 102, 143);
+  text-align: center;
+  padding-bottom: 30px;
    
 }
 
@@ -311,32 +317,59 @@ dl dd {
 .zoo{
     display: flex;
     justify-content: center;
+    align-items: center;
     margin: 10px;
 }
 
+
+
 .imgBox img{
     border-radius: 30%;
-    max-width: 40%;
-    padding: 20px 20px;
+    max-width: 34%;
    
 }
 
+#takasago{
+  border-radius: 30%;
+  max-width: 40%;
+}
+
+
 .text{
-    display: flex;
-    justify-content: space-around;
-    font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px 0; 
+  font-family: 'Kiwi Maru', serif;
+  padding: 20px 20px;
+  
+}
+.text p{
+  padding-bottom: 8px;
+  color: rgb(7, 92, 121);
+  border-bottom: solid rgb(7, 92, 121) 1px;
 }
 
+  
 
-.price{
-    padding: 30px ;
+#price1{
+  font-size: 40px;
+    font-family: 'Caveat', cursive;
+    color: rgb(32, 102, 143);
     text-align: center;
+    padding: 20px;
 }
 
-.price span{
-padding: 10px;
-}
+.spans{
+  display: flex;
+  justify-content: center;
+  font-size: 15px;
+ 
+  }
 
+  .spans span{
+    padding: 20px 8px;
+  }
 
 
 
@@ -355,12 +388,23 @@ font-size: 12px;
 padding: 20px 60px;
 }
 
+.address h1{
+  font-size: 40px;
+  font-family: 'Caveat', cursive;
+  color: rgb(32, 102, 143);
+  text-align: center;
+  padding-bottom: 30px;
+}
+
 
 
 footer{
     text-align: center;
     font-size: small;
-    height: 60px;
-    padding-top: 20px;
-    background-image: url(./canva-blue-watercolor-abstract-background-MAE2KwoFsTU.jpg);
+    height: 50px;
+    padding-top: 30px;
+    background-image: url(./asset/haikei.jpeg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
